--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -82,6 +82,11 @@ a:hover{
     background-color: #b4ebe2;
     padding-bottom: 30px;
 }
+
+.mountain{
+    width: 78%;
+}
+
 .bottom-div{
     background-color: #82d6d2;
     padding-top: 40px;
