--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -27,6 +27,7 @@ h1{
 }
 h2{
     margin-top: 0px;
+    margin-bottom: 0px;
     font-size: 2.5rem;
     color: #25a897;
 }
@@ -97,7 +98,7 @@ a:hover{
     right: 10%;
 }
 .bottom-cloud{
-    position: absolute;
+    display: block;
 }
 .profile-pic{
     padding-top: 30px;
